# open-tools

./: CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
docs/: step1-build-summary.md
plugin-host/: deno.json  main.ts
scripts/: build-sidecar.sh  download-deno.sh
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs  shortcut.rs  sidecar.rs  tray.rs
src-tauri/src/commands/: calc.rs  mod.rs  open.rs  plugin.rs  search.rs
src/components/: PluginManager.vue  ResultList.vue  SearchBox.vue
src/store/: app.ts
